force-app/main/default/objects/FilterObject__c/FilterObject__c.object-meta.xml
<CustomObject>
    <label>FilterObject</label>
    <nameField>
        <label>FilterObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FilterObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>