force-app/main/default/objects/FilterObject__c/fields/Criteria_for_Executing_Filter_Action__c.field-meta.xml
<CustomField>
    <fullName>Criteria_for_Executing_Filter_Action__c</fullName>
    <label>Criteria for Executing Filter Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conditions are met</fullName>
                <default>true</default>
                <label>Conditions are met</label>
            </value>
            <value>
                <fullName>Formula evaluates to true</fullName>
            </value>
            <value>
                <fullName>No criteria—just execute the actions!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>