force-app/main/default/objects/FilterObject__c/fields/Criteria_Name__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Name__c</fullName>
    <label>Criteria Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>