force-app/main/default/objects/FilterObject__c/fields/Process_Order__c.field-meta.xml
<CustomField>
    <fullName>Process_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Process Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>